editing js file

--- a/index.html
+++ b/index.html
@@ -22,34 +22,37 @@
         </div>
 
         <div class="add-resource">
-           <input class="inputs" type="text" placeholder="Digite uma descrição">
-           <input class="inputs" type="text" placeholder="Numero">
-           <button class="btn">Adicionar</button>
+           <input id="description" type="text" placeholder="Digite uma descrição">
+           <input id="cash" type="text" placeholder="Numero">
+           <button id="add" class="btn">Adicionar</button>
         </div>
 
         <div class="transactions-recents">
             <span>Recentes</span>
 
-            <div class="resource positive">
-                <span>Salário primeira parte</span>
-                <div class="cash">
-                    <h3>R$ 2.000.00</h3>
-                    <i class='bx bx-trash' ></i>
+            <div class="recents">
+                <!-- <div class="resource positive">
+                    <span>Salário primeira parte</span>
+                    <div class="cash">
+                        <h3>R$ 2.000.00</h3>
+                        <i class='bx bx-trash' ></i>
+                    </div>
                 </div>
-            </div>
-            <div class="resource negative">
-                <span>Abastecimento do carro</span>
-                <div class="cash">
-                    <h3>R$ 150,00</h3>
-                    <i class='bx bx-trash' ></i>
+                <div class="resource negative">
+                    <span>Abastecimento do carro</span>
+                    <div class="cash">
+                        <h3>R$ 150,00</h3>
+                        <i class='bx bx-trash' ></i>
+                    </div>
                 </div>
-            </div>
-            <div class="resource negative">
-                <span>Lache na faculdade</span>
-                <div class="cash">
-                    <h3>R$ 20,80</h3>
-                    <i class='bx bx-trash' ></i>
-                </div>
+                <div class="resource negative">
+                    <span>Lache na faculdade</span>
+                    <div class="cash">
+                        <h3>R$ 20,80</h3>
+                        <i class='bx bx-trash' ></i>
+                    </div>
+                </div> -->
+                <span>Nenhuma atividade recente registrada</span>
             </div>          
             <div class="more">
                 <a href="#">Mostrar mais</a>
