editing javascript files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <i class='bx bx-money'></i>
                 <div class="balance">
                     <span>Saldo Atual</span>
-                    <h3>R$ 2.150,00</h3>
+                    <h3>R$ 0,00</h3>
                 </div>
             </div>
         </div>
@@ -30,22 +30,7 @@
         <div class="transactions-recents">
             <span>Recentes</span>
 
-            <div class="recents">
-                <!-- <div class="resource positive">
-                    <span>Salário primeira parte</span>
-                    <div class="cash">
-                        <h3>R$ 2.000.00</h3>
-                        <i class='bx bx-trash' ></i>
-                    </div>
-                </div>
-                <div class="resource negative">
-                    <span>Abastecimento do carro</span>
-                    <div class="cash">
-                        <h3>R$ 150,00</h3>
-                        <i class='bx bx-trash' ></i>
-                    </div>
-                </div> -->
-                <span>Nenhuma atividade recente registrada</span>
+            <div class="recents active">
             </div>          
             <div class="more">
                 <a href="#">Mostrar mais</a>
