editing javascript files and css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div class="transactions-recents">
             <span>Recentes</span>
 
-            <div class="recents active">
+            <div class="recents">
+                <p class="active">Nenhuma atividade recente registrada</p>
             </div>          
             <div class="more">
                 <a href="#">Mostrar mais</a>
