updated functions in javascript file

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
 
         <div class="add-resource">
-           <input id="description" type="text" placeholder="Digite uma descrição">
-           <input id="cash" type="text" placeholder="Numero">
+           <input id="description" type="text" placeholder="digite uma descrição">
+           <input id="cash" type="text" placeholder="valor">
            <button id="add" class="btn">Adicionar</button>
         </div>
 
